# srag-opendatasus-challenge

./: .env-example  .gitignore  README.md  Runner.py  docker-compose.yml  pyproject.toml  requirements.txt
src/app/: Graph.py
src/app/agents/: main_agent.py  summarizer_agent.py
src/app/agents/artifacts/: prompt_hub.py  prompts.json
src/app/responses/: main_agent_response.py  summarizer_agent.py
src/app/tools/: query_data_tool.py  tavily_search_tool.py
src/data/reports/: relatorio_influenza.tex
src/data/templates/latex/: report_template.tex
src/eda/: eda_influd.ipynb
src/pipelines/: load.py  setup.py
src/settings/: logging.json
src/utils/: db.py  formatting.py
