[project]
name = "srag-opendatasus-challenge"
version = "0.1.0"
authors = [
    { name = "Henrique Bezerra Lucas", email = "henriquelucas15@outlook.com.br" }
]
readme = "README.md"
requires-python = ">=3.11.9,<3.12"
dependencies = [
    "langgraph>=0.6.6",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.31",
    "openai>=1.101.0",
    "pandas>=2.3.2",
    "numpy>=2.1.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "matplotlib>=3.10.0",
    "pylatex>=1.4.2",
    "tavily-python>=0.7.11",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.16.1",
    "ipywidgets>=8.1.7",
    "jupyterlab-widgets>=3.0.15",
]
